AM_CPPFLAGS = \
	-I $(srcdir)/../../include

TESTS = param method constant interface sequence array

noinst_PROGRAMS = $(TESTS)

param_SOURCES = param.cpp 

method_SOURCES = method.cpp

constant_SOURCES = constant.cpp

interface_SOURCES = interface.cpp

sequence_SOURCES = sequence.cpp

array_SOURCES = array.cpp

